refactor portal server boundaries
